--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -58,4 +58,21 @@ ul {
 
 .recipeList {
 	margin-top: 60px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
 }
+
+// goes in div class 
+
+
+
+.recipe-container{
+ flex: 0 1 calc(33% - 20px)
+}
+
+.img-container {
+	width: 100%;
+	& img { width: 100%;}
+}
+
