--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -56,7 +56,7 @@ ul {
 	background-color: blue;
 } 
 
-.recipeList {
+.recipe-list {
 	margin-top: 60px;
 	display: flex;
 	flex-wrap: wrap;
@@ -74,5 +74,9 @@ ul {
 .img-container {
 	width: 100%;
 	& img { width: 100%;}
+}
+
+.results-count-container {
+	flex-basis: 100%;
 }
 
