--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -10,8 +10,56 @@ body {
 	padding: 0 1%;
 }
 
+
+.main-welcome-page {
+	height: 100vh;
+}
+
+.video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+}
+
+/* Add some content at the bottom of the video/page */
+.content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    background: white;
+    width: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    height: 50px;
+}
+
+.main-welcome-page .overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    background: rgba(0, 0, 0, 0.5);
+    /*opacity: 0.5;*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
 nav {
-    display: block;
+	// display: block;
+	display: none;
     padding: 5px 0;
     position: fixed;
   	margin-top: 0;
@@ -32,6 +80,12 @@ nav {
 
 .main-menu li:hover .sub-menu {
 	display: block;
+}
+.main-menu .cuisine-type:hover .sub-menu {
+	display: flex;
+	width: 500px;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 label {
@@ -83,6 +137,13 @@ input[type="checkbox"]:checked + label {
     background: brown;
 }
 
+// .cuisine-type .sub-menu {
+// 	width: 500px;
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: space-around;
+// }
+
 .recipe-list {
 	margin-top: 60px;
 	display: flex;
@@ -97,10 +158,27 @@ input[type="checkbox"]:checked + label {
 .recipe-container{
 	flex: 0 1 calc(33% - 20px);
 	text-decoration: none;
+	border: 1px solid black;
+	margin-bottom: 30px;
 }
 
+
 .recipe-container a {
+	color: black;
 	text-decoration: none;
+	&:active {color: black;}
+	&:visited {color: black;}
+}
+
+
+
+
+
+
+.recipe-container h2,
+.recipe-container h3 {
+	margin: 0;
+	padding: 10px;
 }
 
 .img-container {
