--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -10,17 +10,21 @@ body {
 	padding: 0 1%;
 }
 
-
 .main-welcome-page {
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
-.video {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
+#myVideo {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: auto;
+	z-index: -100;
+	transform: translate(-50%, -50%);
 }
 
 /* Add some content at the bottom of the video/page */
@@ -36,15 +40,15 @@ body {
 }
 
 .main-welcome-page .overlay {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
+    position: fixed;
+    top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
     z-index: 2;
     background: rgba(0, 0, 0, 0.5);
-    /*opacity: 0.5;*/
 }
+
 
 nav {
 	// display: block;
@@ -58,9 +62,17 @@ nav {
 }
 
 .main-menu {
-	display: flex;
-	justify-content: space-around;
+	// display: flex;
+	// justify-content: space-around;
+
 	padding: 10px 1%;
+}
+
+.main-menu-options {
+	display: inline-block;
+	border: 1px solid black;
+	margin-right: 1%;
+	padding: 5px;
 }
 
 .sub-menu input:hover + label {
@@ -70,12 +82,13 @@ nav {
 .main-menu li:hover .sub-menu {
 	display: block;
 }
-.main-menu .cuisine-type:hover .sub-menu {
-	display: flex;
-	width: 500px;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
+
+// .main-menu .cuisine-type:hover .sub-menu {
+// 	display: flex;
+// 	width: 500px;
+//     flex-wrap: wrap;
+//     justify-content: space-around;
+// }
 
 label {
 	background: lightgrey;
@@ -102,7 +115,7 @@ ul {
 }
 
 .search-bar input {
-	width: 90%;
+	width: 80%;
 	border: none;
 	padding: 2px;
 }
@@ -169,3 +182,10 @@ a {
 .results-count-container {
 	flex-basis: 100%;
 }
+
+
+
+
+// .main-menu li {
+// 	border: 1px solid black;
+// }
