--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -2,6 +2,7 @@
 
 body {
 	box-sizing: border-box;
+	text-transform: capitalize;
 }
 
 .wrapper {
@@ -13,6 +14,23 @@ body {
 input:focus,
 button:focus {
 	outline:0;
+	box-shadow: 2px 1px 2px 0px #bcbcbc;
+}
+
+input:hover {
+	transition: 0.3s;
+	box-shadow: 2px 1px 2px 0px #bcbcbc;
+}
+
+i.fa-spinner {
+	display: none;
+	font-size: 100px;
+    color: orange;
+    position: fixed;
+	top: 30vw;
+	top: 40%;
+	left: 45vw;
+	transform: translateX(-50%);
 }
 
 .main-welcome-page {
@@ -68,6 +86,7 @@ button:focus {
 		color: #999999;
 	}
 }
+
 .initial-search-box {
 	width: 100%;
 	height: 50px;
@@ -86,40 +105,36 @@ nav {
     width: 100%;
 	background: white;
 	z-index: 10;
+	text-transform: capitalize;
 }
 
 .main-menu {
 	padding: 10px 1%;
-	& li:last-child {padding: 0px; border: none;}
 }
-
-.main-menu li:last-child {padding: 0px; border: none;}
-
 
 .main-menu-options {
 	display: inline-block;
 	border-radius: 5px;
-    border: 1px solid lightgrey;
 	margin-right: 1%;
-	padding: 5px;
 	margin-top: 13px;
 	& button {
 		padding: 5px;
     	border-radius: 5px;
-    	background: white;
+		background: white;
+		text-transform: capitalize;
 	}
 }
 
-.main-menu li:hover .sub-menu {
-	display: block;
+.main-menu-options input { margin-right: 5px}
+
+.main-menu-options .submenu {
+	font-size: 0px;
 }
 
-// .main-menu .cuisine-type:hover .sub-menu {
-// 	display: flex;
-// 	width: 500px;
-//     flex-wrap: wrap;
-//     justify-content: space-around;
-// }
+.main-menu-options button:hover {
+	background-color: orange;
+	color: white;
+}
 
 label {
 	background: lightgrey;
@@ -136,26 +151,25 @@ ul {
 	display: none;
 	position: absolute;
 	padding-top: 15px;
-}
-
-.sub-menu input:hover + label {
-	background: yellow;
-}
-
-.submenu label:checked {
-	background: grey;
+    width: 430px;
+	font-size: 0;
+	& li {
+		border: 1px solid black;
+		width: 50%;
+		font-size: 1rem;
+		display: inline-block;	
+	}
 }
 
 .search-bar {
 	flex: 2;
-}
-
-.search-bar input {
-	width: 80%;
-	border: none;
-	padding: 13px;
-	border-radius: 5px;
-	border: 1px solid lightgrey;
+	& input {
+		width: 80%;
+		border: none;
+		padding: 13px;
+		border-radius: 5px;
+		border: 1px solid lightgrey;
+	}
 }
 
 .course-type, 
@@ -164,17 +178,9 @@ ul {
 	flex: 1;
 }
 
-.sub-menu li {
-    border: 1px solid black;
-}
-
-input[type=radio], input[type=checkbox] {
-	display: none;
-}
-
-input[type="radio"]:checked + label,
-input[type="checkbox"]:checked + label {
-    background: brown;
+.submit button {
+	background: orange;
+    color: white;
 }
 
 // --- recipe grid --- //
@@ -198,13 +204,29 @@ a {
 }
 
 .recipe-container h2,
-.recipe-container h3 {
+.recipe-container h3,
+.recipe-container h4 {
 	color: black;
 	text-decoration: none;
 	&:active {color: black;}
 	&:visited {color: black;}
 	margin: 0;
-	padding: 10px;
+	padding: 5px;
+}
+
+.recipe-container h2 {    
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.recipe-container h3 {
+	padding: 5px;
+	font-weight: 500;
+}
+
+.recipe-container h4 {
+	font-size: 1rem;
+    font-weight: 600;
 }
 
 .star {color: orange}
@@ -242,7 +264,7 @@ a {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-color: rgba(197, 102, 25, 0.95);
+	background-color: rgba(255,165,0, 0.95);
 	justify-content: center;
 	align-items: center;
 	color: #FFFFFF;
